rewrite dota-related stuff

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 token_and_api_key.py
-/__pycache__/*
-/dota2bot/__pycache__/*
 rename.py
 /images/twitch/wow.png
 Procfile
@@ -15,3 +13,4 @@ dosh.pickle
 /images/heroes/lineup/itemlist2.png
 /images/heroes/lineup/lineup.png
 throw.py
+*.pyc
